--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,13 +15,13 @@
     <td><%= post.user %></td>
     <td><%= post.time %></td>
     <td><%= post.place %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', post, class: "btn" %></td>
+    <td><%= link_to 'Edit', edit_post_path(post), class: "btn" %></td>
+    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn" %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, class: "btn" %>
